syntax = "proto3";
package gov.hhs.aspr.gcm.translation.protobuf;

option java_multiple_files = true;
option java_package = "gov.hhs.aspr.gcm.translation.protobuf.plugins.materials.input";

import "resources-plugin.proto";
import "properties-plugin.proto";
import "reports-plugin.proto";
import "google/protobuf/any.proto";

message MaterialIdInput {
    google.protobuf.Any id = 1;
}

message MaterialsProducerIdInput {
    google.protobuf.Any id = 1;
}

message MaterialsProducerPropertyIdInput {
    google.protobuf.Any id = 1;
}

message MaterialsProducerPropertyValueMapInput {
    MaterialsProducerIdInput materialsProducerId = 1;
    repeated PropertyValueMapInput propertyValues = 2;
}

message MaterialsProducerResourceLevelMapInput {
    MaterialsProducerIdInput materialsProducerId = 1;
    repeated ResourceInitializationInput resourceLevels = 2;
}

message BatchIdInput {
    int32 id = 1;
}

message BatchPropertyIdInput {
    google.protobuf.Any id = 1;
}

message BatchPropertyDefinitionMapInput {
    MaterialIdInput materialId = 1;
    repeated PropertyDefinitionMapInput propertyDefinitions = 2;
}

message BatchInput {
    BatchIdInput batchId = 1;
    MaterialIdInput materialId = 2;
    double amount = 3;
}

message BatchPropertyValueInput {
    BatchIdInput batchId = 1;
    repeated PropertyValueMapInput propertyValues = 2;
}

message MaterialsProducerInventoryBatchesInput {
    MaterialsProducerIdInput materialsProducerId = 1;
    repeated BatchIdInput batches = 2;
}

message StageIdInput {
    int32 id = 1;
}

message StageInput {
    StageIdInput stageId = 1;
    bool offered = 2;
}

message StageBatchInput {
    StageIdInput stageId = 1;
    repeated BatchIdInput batchesInStage = 2;
}

message MaterialsProducerStagesInput {
    MaterialsProducerIdInput materialsProducerId = 1;
    repeated StageIdInput stages = 2;
}

message MaterialsPluginDataInput {
    repeated MaterialIdInput materialIds = 1;
    repeated MaterialsProducerIdInput materialsProducerIds = 2;
    repeated BatchPropertyDefinitionMapInput batchPropertyDefinitions = 3;
    repeated PropertyDefinitionMapInput materialsProducerPropertyDefinitions = 4;
    repeated MaterialsProducerPropertyValueMapInput materialsProducerPropertyValues = 5;
    repeated MaterialsProducerResourceLevelMapInput materialsProducerResourceLevels = 6;
    repeated BatchInput batchIds = 7;
    repeated BatchPropertyValueInput batchPropertyValues = 8;
    repeated MaterialsProducerInventoryBatchesInput materialsProducerInverntoryBatches = 9;
    repeated StageInput stageIds = 10;
    repeated StageBatchInput stageBatches = 11;
    repeated MaterialsProducerStagesInput materialsProducerStages = 12;
    int32 nextBatchRecordId = 13;
	int32 nextStageRecordId = 14;
}

enum TestBatchPropertyIdInput {
    BATCH_PROPERTY_1_1_BOOLEAN_IMMUTABLE_NO_TRACK = 0;
    BATCH_PROPERTY_1_2_INTEGER_MUTABLE_NO_TRACK = 1;
    BATCH_PROPERTY_1_3_DOUBLE_MUTABLE_NO_TRACK = 2;
    BATCH_PROPERTY_2_1_BOOLEAN_MUTABLE_TRACK = 3;
    BATCH_PROPERTY_2_2_INTEGER_IMMUTABLE_TRACK = 4;
    BATCH_PROPERTY_2_3_DOUBLE_MUTABLE_TRACK = 5;
    BATCH_PROPERTY_3_1_BOOLEAN_MUTABLE_NO_TRACK = 6;
    BATCH_PROPERTY_3_2_INTEGER_MUTABLE_NO_TRACK = 7;
    BATCH_PROPERTY_3_3_DOUBLE_IMMUTABLE_NO_TRACK = 8;
}

enum TestMaterialIdInput {
    MATERIAL_1 = 0;
    MATERIAL_2 = 1;
    MATERIAL_3 = 2;
}

enum TestMaterialsProducerIdInput {
    MATERIALS_PRODUCER_1 = 0;
    MATERIALS_PRODUCER_2 = 1;
    MATERIALS_PRODUCER_3 = 2;
}

enum TestMaterialsProducerPropertyIdInput {
    MATERIALS_PRODUCER_PROPERTY_1_BOOLEAN_MUTABLE_NO_TRACK = 0;
    MATERIALS_PRODUCER_PROPERTY_2_INTEGER_MUTABLE_NO_TRACK = 1;
    MATERIALS_PRODUCER_PROPERTY_3_DOUBLE_MUTABLE_NO_TRACK = 2;
    MATERIALS_PRODUCER_PROPERTY_4_BOOLEAN_MUTABLE_TRACK = 3;
    MATERIALS_PRODUCER_PROPERTY_5_INTEGER_MUTABLE_TRACK = 4;
    MATERIALS_PRODUCER_PROPERTY_6_DOUBLE_MUTABLE_TRACK = 5;
    MATERIALS_PRODUCER_PROPERTY_7_BOOLEAN_IMMUTABLE_NO_TRACK = 6;
    MATERIALS_PRODUCER_PROPERTY_8_INTEGER_IMMUTABLE_NO_TRACK = 7;
    MATERIALS_PRODUCER_PROPERTY_9_DOUBLE_IMMUTABLE_NO_TRACK = 8;
}

message BatchStatusReportPluginDataInput {
    ReportLabelInput reportLabel = 1;
}

message MaterialsProducerPropertyReportPluginDataInput {
    ReportLabelInput reportLabel = 1;
}

message MaterialsProducerResourceReportPluginDataInput {
    ReportLabelInput reportLabel = 1;
}

message StageReportPluginDataInput {
    ReportLabelInput reportLabel = 1;
}